--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~12.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "http-server": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.2",
