--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "run:server":"http-server C:\xampp\htdocs\Angular12Crud"
+    "run:server":"http-server C:\\xampp\\htdocs\\Angular12Crud"
   },
   "private": true,
   "dependencies": {
